# Gray-Scott

./: README.md
src/: CMakeLists.txt  grayscottsolver.cpp  grayscottsolver.h  imageviewer.cpp  linalg.cpp  linalg.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h  surfacegraph.cpp  surfacegraph.h
